<resources>
    <string name="app_name">校园安全系统</string>
    <string name="title_activity_login">校园安全-登录</string>
    <string name="title_activity_patrol_task">巡逻任务</string>

    <!-- Strings related to login -->
    <string name="prompt_email">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">立即登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_home_activity">首页</string>
    <string name="act_destroy">注销</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_content">校园安全系统</string>
    <string name="tip_user_not_null">用户名不能为空</string>
    <string name="tip_password_not_null">密码不能为空</string>
    <string name="str_day_patrol">每日巡逻</string>
    <string name="str_temporary_patrol">临时巡逻</string>
    <string name="str_emergency_patrol">紧急巡逻</string>
    <string name="patrol_time">规定时间：</string>
    <string name="pre_start_patrol_state">当前状态：未开始</string>
    <string name="start_patrol">当前状态：巡逻中</string>
    <string name="patrol_complete">当前状态：已完成</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="bt_read">读卡 </string>
    <string name="stop_read">停止读卡 </string>
    <string name="bt_write">写卡 </string>
    <string name="tx_read">读取的内容如下 :</string>

    <string name="tx_name">写卡命令 :</string>
    <string name="tx_sex">性别 :</string>
    <string name="tx_age">年龄 :</string>
    <string name="tx_address">地址 :</string>
    <string name="tips">请至少输入上面中的一项！</string>

    <string name="tips_noread">没有读到内容！</string>

    <string name="txt_name">小明</string>
    <string name="txt_sex">女</string>
    <string name="txt_age">20</string>
    <string name="txt_address">深圳XXXX</string>
    <string name="state_untreated">未开始</string>
    <string name="state_processing">处理中</string>
    <string name="state_processed">已处理</string>
    <string name="title_security_check_list">检查项目</string>
    <string name="go_to_sign">转签</string>
    <string name="manage">处理</string>
    <string name="title_patrol_contnet_activity">巡逻任务</string>
    <string name="patrol_start">:开始</string>
    <string name="end_patrol">:结束</string>
    <string name="scan_carding">校验中...</string>
    <string name="scan_card_fail">刷卡失败</string>
    <string name="report_date">上报时间:</string>
    <string name="current_date">当前状态：</string>
    <string name="btn_dispose">处理</string>
    <string name="post_successful">提交成功</string>
    <string name="post_fail">提交失败</string>
    <string name="title_process_list">安保人员</string>
    <string name="str_select_processor">请选择要处理的安保人员</string>
    <string name="title_add_security_check">提交安全检查</string>
    <string name="btn_post">点击提交</string>
    <string name="str_update_image_fial">上传图片不成功，请重试</string>
    <string name="str_choose_processor">请左滑选择安全人员</string>
    <string name="string_not_info">请填写必要信息</string>
    <string name="set_avatar">设置头像</string>
    <string name="change_password">修改密码</string>
    <string name="lagou">退出帐号</string>
    <string name="photo">相机</string>
    <string name="upload_picture">上传头像</string>
    <string name="not_data">暂时没有数据</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password_2">重复密码</string>
    <string name="password_edit">修改密码</string>
    <string name="str_password_different">你两次输入的新密码不一致，请重复输入</string>
    <string name="fragment_security_check">安全检查</string>
    <string name="fragment_patrol_record">巡逻纪录</string>
    <string name="title_history_record">历史记录</string>
    <string name="tip_start_security_check">开始处理...</string>
    <string name="str_read">已读</string>
    <string name="un_read">未读</string>
    <string name="title_message">消息</string>
    <string name="tip_card">把您的卡片贴于手机背面</string>
    <string name="tip_device_not_support">设备不支持NFC！</string>
    <string name="please_first_enable_nfc_function_in_the_system_settings">请在系统设置中先启用NFC功能！</string>
    <string name="scan_card_title">刷卡</string>
</resources>
