<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_10"
    android:paddingRight="@dimen/margin_10"
    android:paddingTop="@dimen/margin_30"
    >

    <EditText
        android:id="@+id/tvOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/margin_10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/tvNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:drawablePadding="@dimen/margin_10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/tvNewPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:drawablePadding="@dimen/margin_10"
        android:hint="@string/new_password_2"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnPassworldEdit"
        style="@style/comm_btn_style_level2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_100"
        android:layout_marginTop="16dp"
        android:text="@string/change_password"
        android:textStyle="bold"
        />

</LinearLayout>

