<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@mipmap/login_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.campussecurity.app.login.LoginActivity">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_60"
                android:src="@mipmap/login_header_bg"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@mipmap/ic_login_user"
                android:drawablePadding="@dimen/margin_10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_10"
                android:paddingTop="@dimen/margin_10"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorLoginHintText"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawableLeft="@mipmap/ic_login_password"
                android:drawablePadding="@dimen/margin_10"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="@dimen/margin_10"
                android:paddingTop="@dimen/margin_10"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorLoginHintText"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white"
                />

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorLoginBtn"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorLoginHintText"
                />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
